--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,10 @@
 */
 
 /* Reset */
+.headshot {
+	width: 100px;
+	
+}
 
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 		margin: 0;
@@ -2641,8 +2645,9 @@
 		}
 
 		.wrapper.style1 {
-			background-color: #21b2a6;
-			color: #c7ebe8;
+			background-color: #24405b;
+			/* color: #63798E; */
+			color: white;
 		}
 
 			.wrapper.style1 strong, .wrapper.style1 b {
@@ -2666,7 +2671,9 @@
 			}
 
 			.wrapper.style1 header p {
-				color: #a6e0db;
+				/* color: #a6e0db*/
+				color: white;
+				
 			}
 
 			.wrapper.style1 header.major h2, .wrapper.style1 header.major h3, .wrapper.style1 header.major h4, .wrapper.style1 header.major h5, .wrapper.style1 header.major h6 {
@@ -2702,7 +2709,7 @@
 				.wrapper.style1 input[type="radio"] + label:before {
 					background: rgba(255, 255, 255, 0.075);
 				}
-
+/* 
 			.wrapper.style1 input[type="checkbox"]:checked + label:before,
 			.wrapper.style1 input[type="radio"]:checked + label:before {
 				background: #ffffff;
@@ -2727,7 +2734,7 @@
 
 			.wrapper.style1 .formerize-placeholder {
 				color: #a6e0db !important;
-			}
+			} */
 
 			.wrapper.style1 .icon.major {
 				border-color: rgba(0, 0, 0, 0.125);
